<resources>
    <string name="app_name">Product Inventory</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_product">Add Product</string>
    <string name="view_edit">View/Edit</string>
    <string name="invoice">Invoice</string>
    <string name="customer_details">Customer Details</string>
    <string name="report">Report</string>
    <string name="save">Save</string>
    <string name="email_id">Email ID</string>
    <string name="mobile_no">Mobile No</string>
    <string name="city">City</string>
    <string name="generate_invoice">Generate Invoice</string>
    <string name="customer_name">Customer Name:</string>
    <string name="stock_report">Stock Report</string>
    <string name="billing_report">Billing Report</string>
</resources>
