<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_addProduct"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/add_product" />

        <TextView
            android:id="@+id/text_addProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/add_product"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_edit"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/view_edit" />

        <TextView
            android:id="@+id/text_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/view_edit"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"

        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_invoice"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/invoice" />

        <TextView
            android:id="@+id/text_invoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/invoice"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">
        <!--android:layout_below="@id/layout2"-->
        <!--android:layout_marginTop="40dp"-->
        <ImageView
            android:id="@+id/image_customerDetails"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/customer_details" />

        <TextView
            android:id="@+id/text_customerDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/customer_details"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="40dp"

        android:gravity="center"
        android:orientation="vertical">
        <!--android:layout_marginTop="40dp"-->
        <!--android:layout_below="@+id/layout3"-->
        <ImageView
            android:id="@+id/image_report"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/report" />

        <TextView
            android:id="@+id/text_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/report"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>