<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/dimen_8"
    android:layout_marginTop="@dimen/dimen_5"
    android:layout_marginEnd="@dimen/dimen_8"
    android:layout_marginBottom="@dimen/dimen_10"
    app:cardElevation="@dimen/txt_2"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_5"
        android:layout_marginTop="@dimen/dimen_10"
        android:layout_marginRight="@dimen/dimen_5"
        android:layout_marginBottom="@dimen/dimen_10"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_cName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_5"
            android:layout_marginEnd="@dimen/dimen_20"
            android:text="@string/customer_name"
            android:textColor="@color/dark_grey"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_cName_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_5"
            android:layout_toEndOf="@+id/text_cName"
            android:text="@string/customer_name"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_cName"
            android:layout_marginTop="2dp"
            android:text="@string/email_id"
            android:textColor="@color/dark_grey"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_email_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_cName_value"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@+id/text_cName"
            android:text="@string/email_id"

            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_mob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_email"
            android:layout_marginTop="2dp"
            android:text="@string/mobile_no"
            android:textColor="@color/dark_grey"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_mobValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_email_value"
            android:layout_marginTop="@dimen/dimen_5"
            android:layout_toEndOf="@+id/text_cName"
            android:text="mobile no"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_mob"
            android:layout_marginTop="2dp"
            android:text="@string/city"
            android:textColor="@color/dark_grey"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_cityValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_mobValue"
            android:layout_marginTop="@dimen/dimen_5"
            android:layout_toEndOf="@+id/text_cName"
            android:text="city name"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </RelativeLayout>

</android.support.v7.widget.CardView>