<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_8"
                    android:layout_marginTop="@dimen/dimen_5"
                    android:layout_marginRight="@dimen/dimen_8"
                    android:layout_marginBottom="@dimen/dimen_10"
                    app:cardElevation="@dimen/txt_2"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/dimen_5"
                        android:layout_marginTop="@dimen/dimen_10"
                        android:layout_marginRight="@dimen/dimen_5"
                        android:layout_marginBottom="@dimen/dimen_10"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:orientation="vertical">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/layout_custname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:theme="@style/TextLabel">

                            <EditText
                                android:id="@+id/editCustomerName"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:hint="Customer Name"
                                android:imeOptions="actionNext"
                                android:inputType="textNoSuggestions"
                                android:singleLine="true" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/layout_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:theme="@style/TextLabel">

                            <EditText
                                android:id="@+id/edit_email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/email_id"
                                android:inputType="textEmailAddress"
                                android:singleLine="true" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/layout_mob"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:theme="@style/TextLabel">

                            <EditText
                                android:id="@+id/edit_mob_no"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/mobile_no"
                                android:maxLength="10"
                                android:inputType="number"
                                android:singleLine="true" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/layout_city"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:theme="@style/TextLabel">

                            <EditText
                                android:id="@+id/edit_city"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/city"
                                android:inputType="textAutoCorrect"
                                android:singleLine="true" />
                        </android.support.design.widget.TextInputLayout>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dimen_10"
                            android:paddingLeft="@dimen/dimen_5"
                            android:text="Product Name:"
                            android:textColor="@color/dark_grey"
                            android:textSize="@dimen/txt_12" />

                        <Spinner
                            android:id="@+id/spinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_marginTop="@dimen/dimen_5"
                            android:gravity="start"
                            android:spinnerMode="dropdown"
                            android:textAlignment="textStart"
                            android:textColor="@android:color/black"
                            android:theme="@style/ThemeOverlay.AppCompat.Light" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginLeft="@dimen/dimen_5"
                            android:layout_marginTop="@dimen/dimen_5"
                            android:layout_marginRight="@dimen/dimen_5"
                            android:layout_marginBottom="@dimen/dimen_10"
                            android:background="@android:color/black" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dimen_10"
                            android:paddingLeft="@dimen/dimen_5"
                            android:text="Stock Details:"
                            android:textColor="@color/dark_grey"
                            android:textSize="@dimen/txt_16" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dimen_10"
                            android:paddingLeft="@dimen/dimen_5"
                            android:text="Size"
                            android:textColor="@color/dark_grey"
                            android:textSize="@dimen/txt_12" />

                        <Spinner
                            android:id="@+id/spinner_size"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_marginTop="@dimen/dimen_5"
                            android:gravity="start"
                            android:spinnerMode="dropdown"
                            android:textAlignment="textStart"
                            android:textColor="@android:color/black"
                            android:theme="@style/ThemeOverlay.AppCompat.Light" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginLeft="@dimen/dimen_5"
                            android:layout_marginTop="@dimen/dimen_5"
                            android:layout_marginRight="@dimen/dimen_5"
                            android:layout_marginBottom="@dimen/dimen_10"
                            android:background="@android:color/black" />

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/layout_quantity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:theme="@style/TextLabel">

                            <EditText
                                android:id="@+id/edit_quantity"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="Quantity"
                                android:inputType="number"
                                android:singleLine="true" />
                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <Button
                    android:id="@+id/button_invoice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:background="@color/colorPrimary"
                    android:text="@string/generate_invoice"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/txt_12" />
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </RelativeLayout>
    <!-- TODO: Update blank fragment layout -->
</android.support.design.widget.CoordinatorLayout>